# horus-compile

./: .gitignore  AARCH64  LICENSE  README.md  mypy.ini  pyproject.toml  readme.md
.github/workflows/: ci.yml  python-publish.yml  release.yml
scripts/ci/: get_version.py
src/horus/: Check.py  CheckedPreprocessedInstruction.py  __init__.py  horus_error.py  test.py  utils.py
src/horus/compiler/: allowed_syscalls.py  check_language.ebnf  check_parser.py  code_elements.py  contract_definition.py  horus.ebnf  horus_compile.py  horus_definition.py  horus_preprocessor.py  parser.py  parser_transformer.py  preprocessor.py  storage_info.py  type_checker.py  var_names.py  z3_transformer.py
src/horus/scripts/: horus-compile
tests/: test_compiler.py  test_parser.py  test_parser_transformer.py
tests/compiler_tests/: complex_type_expressions.cairo  inverse.cairo  nested_calls.cairo
tests/division/: gauss_div.cairo  loop.cairo  peano_pow.cairo  test_body.cairo
tests/golden/: add_first_n_good.cairo  add_first_n_good.gold  add_first_n_good_other.cairo  add_first_n_good_other.gold  assert_test.cairo  assert_test.gold  compile_time_simplify.cairo  compile_time_simplify.gold  complex_type_expressions.cairo  complex_type_expressions.gold  complex_type_storage.cairo  complex_type_storage.gold  const_example.cairo  const_example.gold  count_down.cairo  count_down.gold  count_down_double.cairo  count_down_double.gold  div_test.cairo  div_test.gold  func_add_pretty_rec.cairo  func_add_pretty_rec.gold  func_add_rec.cairo  func_add_rec.gold  func_chain.cairo  func_chain.gold  func_gauss.cairo  func_gauss.gold  func_id.cairo  func_id.gold  func_id_id.cairo  func_id_id.gold  func_mul3.cairo  func_mul3.gold  func_multiple_ret.cairo  func_multiple_ret.gold  func_peano_prod.cairo  func_peano_prod.gold  func_pred.cairo  func_pred.gold  (+61 more)
tests/sat/: decompose_as_sum.cairo  func_call.cairo  inverse.cairo  loop.cairo  polynomial_value.cairo  square_root.cairo
tests/unsat/: add_first_n.cairo  add_first_n_good.cairo  add_first_n_good_other.cairo  add_rec.cairo  add_rec_expanded.cairo  builtin_range_check.cairo  call_lot.cairo  count_down_double.cairo  factorial.cairo  func_add_pretty_rec.cairo  func_add_rec.cairo  func_chain.cairo  func_gauss.cairo  func_id.cairo  func_id_id.cairo  func_mul3.cairo  func_multiple_ret.cairo  func_peano_prod.cairo  func_pred_succ_id.cairo  func_prod_mul.cairo  func_succ.cairo  func_succ_pred_id.cairo  func_succ_pred_id_pre.cairo  func_succ_succ.cairo  functions.cairo  functions_simple.cairo  gauss.cairo  gauss_div.cairo  inequality.cairo  many_instr.cairo  mev.cairo  mev_spec.cairo  peano_pow.cairo  peano_product.cairo  peano_sum.cairo  sum.cairo  test_artem.cairo  test_body.cairo  test_m.cairo  test_seg_one_loop.cairo  (+10 more)
