[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.poetry]
name = "horus-compile"
version = "0.0.6.13"
authors = ["Nethermind <hello@nethermind.io>"]
description = "Use formally verified annotations in your Cairo code"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: Apache Software License",
    ]
packages = [ { include = "horus", from = "src" } ]
include = [ "src/horus/compiler/horus.ebnf" ]
readme = "README.md"
license = "APACHE LICENSE, VERSION 2.0"
maintainers = [
  "Ganesh Tiwari <ganesh@nethermind.io>",
  "Ilia Vlasov <ilia@nethermind.io>"
]

[tool.poetry.scripts]
horus-compile = "horus.compiler.horus_compile:run"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
cairo-lang = "0.10.1"
marshmallow-dataclass = ">=7.1.0,<8.5.4"
eth-utils = "^1.2.0"
marshmallow = "^3.15.0"
z3-solver = "^4.8.15"
lark = "^1.1.4"

[tool.poetry.dev-dependencies]
isort = "*"
black = "*"
autopep8 = "^1.6.0"
